js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib1/l1.7.kt
class MyClass {
    companion object {
        val intProperty = 3
    }
}
